# pitwall

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ingest.yml  send.yml
backend/alembic/: env.py
backend/alembic/versions/: 1fd68958581c_f1_data_tables.py  41471d17272a_uuid_pks_for_f1_tables.py  bdc69900393e_actually_adding_table_for_f1_data.py
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/api/routes/: auth.py  f1.py  game.py  user.py
backend/app/core/: config.py  errors.py  security.py
backend/app/crud/: __init__.py  f1.py  game.py  prediction.py  user.py
backend/app/db/: cli.py  init_db.py  session.py
backend/app/models/: f1.py  game.py  game_user.py  prediction.py  user.py
backend/app/schema/: f1.py
backend/app/services/: email.py  f1.py  ingest.py  score.py
backend/bruno/: opencollection.yml
backend/bruno/auth/: get_me.yml  login.yml  register_user.yml
backend/bruno/environments/: local.yml
backend/bruno/game/: 01_create_game.yml  create_game.yml  folder.yml  join_game.yml  login.yml  register_user.yml
backend/bruno/game/02_join/: 01_register_user.yml  02_login.yml  03_join_game.yml  folder.yml
backend/bruno/predict/: folder.yml  get_drivers.yml  get_games.yml  get_score.yml  get_seasons.yml  get_sessions.yml  make_prediction.yml
backend/migrations/: env.py
backend/migrations/versions/: 20b77f20dff7_adding_game_and_gameuser_link.py  4892c00e48b4_forgot_to_import_the_models.py  b99108d56f8e_import_sqlmodel_in_script_py_mako.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css
frontend/src/pages/: Auth.tsx  Game.tsx  Games.tsx
