[project]
name = "pitwall"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.1",
    "apscheduler>=3.11.2",
    "bcrypt>=5.0.0",
    "fastapi>=0.128.0",
    "psycopg2>=2.9.11",
    "psycopg[binary]>=3.3.2",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.5",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "resend>=2.23.0",
    "sqlalchemy>=2.0.45",
    "sqlmodel>=0.0.31",
    "uvicorn>=0.41.0",
]

[tool.ruff]
# Path discovery, excludes, etc. (Optional, but good practice)
line-length = 120

[tool.ruff.lint]
# 1. Select the rules you want active.
# 'I' = Isort (Import Sorting)
# 'F' = Pyflakes (Unused variable/import warnings)
# 'E' = Pycodestyle errors
select = ["F", "E", "W", "I"]

# 2. Prevent F401 (Unused Imports) from being fixed/deleted automatically.
# This keeps the warning visible but forces you to delete the import manually.
unfixable = ["F401"]

exclude = ["migrations", "alembic"]
